updated setup files fixed package imports added readme file

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,9 +8,13 @@ long_description = file: ReadMe.md
 long_description_content_type = text/markdown
 classifiers =
     Programming Language :: Python :: 3
-    License :: GPLv3
+    License :: MIT
     Operating System :: OS Independent
 
 [options]
-packages = find:
+packages = WolfStiffness
+include_package_data = True
+install_requires =
+    matplotlib>=3.0.3
+    numpy>=1.16.2
 python_requires = >=3.7
