--- a/setup.cfg
+++ b/setup.cfg
@@ -18,3 +18,8 @@ install_requires =
     matplotlib>=3.0.3
     numpy>=1.16.2
 python_requires = >=3.8
+
+
+[options.extras_require]
+testing =
+    pytest==7.4.2
